--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.8.2",
     "vue": "^2.6.10",
     "vuex": "^3.0.1",
     "webextension-polyfill": "^0.3.1"
